Tue Oct 26 17:07:38 1999  Richard Earnshaw <rearnsha@arm.com>

	* thumb.c: Deleted.  Move contents to ...
	* arm.c: ... here.
	* t-arm-aout, t-arm-coff, t-arm-elf, t-linux, t-netbsd, t-semi: Remove
	rule for thumb.o
	* configure.in (arm*-*-*): Remove thumb.o from extra_objs list.
	* configure: Regen.

	* arm-protos.h: Use RTX_CODE and tidy up long lines.  Don't
	declare a prototype for asm_output_align();

	* arm.c (thumb_condition_code): Delete.
	(arm_print_operand): Always use arm_condition_code array.

	* arm.c (thumb_return_addr_rtx): Delete.
	(arm_save_machine_status, arm_restore_machine_status): Delete.
	(arm_init_machine_status, arm_mark_machine_status): New functions.
	(arm_init_expanders): Update accordingly.
	(arm_return_addr): Renamed from arm_return_addr_rtx.  Rewrite.
	(thumb_expand_prologue): Delete code referencing thumb_return_addr_rtx.
	* arm.h (RETURN_ADDR_RTX): Call arm_return_addr().
	
Tue Oct 26 13:24:16 1999  Nick Clifton  <nickc@cygnus.com>

	* configure.in : Fix arm-*-aout target to use new t-arm-aout
	script. 
	* config/arm/t-arm-aout: New file: Makefile script for arm-*-aout
	targets.

Tue Oct 26 11:27:12 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/thumb.c (output_thumb_prologue): Fix bug creating
	stack backtrace structure.

	* config/arm/arm-protos.h: Add prototypes for functions defined in
	arm/pe.h.
	
	* config/arm/arm.c (arm_override_options): Correct initialization
	of arm_fast_multiply, arm_arch4, arm_arch5, arm_ld_sched,
	arm_is_strong, and arm_is_6_or_7. [Patch from Jeff Law]
	Also fix selection of attributes of default processor.
	
	* config/arm/coff.h: Delete needless #include.
	
	* config/arm/pe.c: Delete unused code.
	
	* config/arm/pe.h (CPP_DEFINES): Delete
	(SUBTARGET_CPP_SPEC): Define.
	(ASM_DECLARE_FUNCTION_NAME): Use ARM_DECLARE_FUNCTION_NAME.
	
	* config/arm/t-pe: Add -DInhibit_libc to allof libgcc.a to build.

Mon Oct 25 15:42:09 1999  Richard Earnshaw (rearnsha@arm.com)
